force-app/main/default/objects/vlocity_cmt__AsyncProcessManager__e/fields/vlocity_cmt__AdditionalData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdditionalData__c</fullName>
    <description>Additional data for all Custom Processes (JSON).</description>
    <label>Additional Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>