force-app/main/default/objects/vlocity_cmt__AsyncProcessManager__e/fields/vlocity_cmt__ItemsToProcessList__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ItemsToProcessList__c</fullName>
    <description>List of the Items to be processed.</description>
    <label>Items To Process List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>